--- a/assets/styles/components/event-card/event-card.css
+++ b/assets/styles/components/event-card/event-card.css
@@ -116,3 +116,15 @@
     font-weight: 500;
     text-align: center;
 }
+
+@media(max-width:800px){
+    .event__card{
+        width: 100%;
+    }
+    .event__card-top{
+        max-width: unset;
+    }
+    .event__card.last .main__button{
+        margin-top: 24px;
+    }
+}
