--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,6 +8,9 @@
 @import url('../styles/components/news-card/news-card.css');
 @import url('../styles/components/universal-banner/universal-banner.css');
 
+/*ABOUT_US */
+@import url("../../pages/about_us/about_us.css");
+
 
 :root {
     --primary-color: #14004E;
@@ -30,6 +33,30 @@
     --margin-sm: 24px;
     --margin-medium: 32px;
     --margin-2xl: 96px;
+}
+
+:root {
+    --primary-color: #14004E;
+    --primary-hover-color: #423270;
+    --primary-press-color: #372668;
+    --white-color: #FFFFFF;
+    --text00-color: #242424;
+    --text01-color: #606C7D;
+    --text02-color: #B6C0CF;
+    --base00-color: #F6F8FC;
+    --base02-color: #313033;
+    --pink-color: #EF036C;
+    --green-color: #31EC56;
+    --warning-color: #FFC700;
+    --purple-color: #6200EA;
+    --purple-hover-color: #7F31EC;
+    --purple-press-color: #9555EE;
+    --orange-color: #FF6F00;
+    --blue-color: #3D5AFE;
+    --margin-sm: 24px;
+    --margin-medium: 32px;
+    --margin-2xl: 96px;
+    --margin-xl: 48px;
 }
 
 * {
@@ -248,14 +275,14 @@ body {
     line-height: 24px;
 }
 
-.text_sm {
+.text-sm {
     font-family: "Euclid Circular B";
     font-size: 14px;
     font-style: normal;
     line-height: 20px;
 }
 
-.text_sl {
+.text-sl {
     font-family: "Euclid Circular B";
     font-size: 12px;
     font-style: normal;
@@ -278,19 +305,17 @@ body {
     border: 1px solid #EFE9FF;
 }
 @media(max-width:1199px) {
-    .title_xl {
+    .title-xl {
         font-size: 24px;
         font-weight: 500;
         line-height: 32px;
     }
 
-    .title_md {
+    .title-md {
         font-size: 24px;
         font-weight: 500;
         line-height: 32px;
     }
-
-
 
     .text-lg {
       font-size: 14px;
@@ -298,7 +323,7 @@ body {
       line-height: 20px;
     }
 
-    .text_md {
+    .text-md {
         font-size: 14px;
         line-height: 24px;
     }
@@ -306,7 +331,7 @@ body {
     .mt-2xl {
         margin-top: var(--margin-xl);
     }
-    .title_lg {
+    .title-lg {
         font-size: 24px;
         font-weight: 500;
         line-height: 32px;
