--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -67,7 +67,8 @@
 }
 
 body {
-    background: var(--base00-color)
+    background: var(--base00-color);
+
 }
 
 .container {
@@ -252,6 +253,13 @@ body {
     font-size: 32px;
     font-style: normal;
     line-height: 48px;
+}
+
+.title-sm {
+    font-family: "Euclid Circular B";
+    font-size: 24px;
+    font-style: normal;
+    line-height: 32px;
 }
 
 .text-xl {
