--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -3,14 +3,27 @@
 @import url('./header.css');
 @import url('./footer.css');
 @import url('../../pages/main_page/main_page.css');
-@import url('../../pages/publish_events/publish_events.css');
 @import url('../styles/components/event-card/event-card.css');
 @import url('../styles/components/popup/popup.css');
 @import url('../styles/components/news-card/news-card.css');
 @import url('../styles/components/universal-banner/universal-banner.css');
+@import url('../styles/components/universal-tabs/universal-tabs.css');
+@import url('../styles/components/universal-filter/universal-filter.css');
 
 /*ABOUT_US */
 @import url("../../pages/about_us/about_us.css");
+/* PUBLISH EVENTS */
+@import url('../../pages/publish_events/publish_events.css');
+/* EVENTS DETAIL */
+@import url('../../pages/publish_events_detail/publish_events_detail.css');
+
+/* posters */
+@import url('../../pages/posters/posters.css');
+/* news */
+@import url('../../pages/news/news.css');
+
+/* news detail */
+@import url('../../pages/news_detail/news_detail.css');
 
 
 :root {
@@ -72,7 +85,7 @@ body {
 }
 
 .container {
-    max-width: 1440px;
+    max-width: 1360px;
     margin: 0 auto;
 }
 
@@ -313,6 +326,16 @@ body {
     color: var(--primary-color);
     border: 1px solid #EFE9FF;
 }
+
+.main__button.blue {
+    background-color: var(--primary-color);
+    font-weight: 500;
+    color: var(--white-color);
+}
+.main__button.full {
+   width: 100%;
+   text-align: center;
+}
 @media(max-width:1199px) {
     .title-xl {
         font-size: 24px;
@@ -350,6 +373,19 @@ body {
 @media (max-width: 600px) {
   .container {
     margin: 0 16px;
+  }
+  .title-md{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 28px; 
+  }
+  .title-sm{
+    font-size: 18px;
+    line-height: 28px;
+  }
+  .mobile-full{
+    width: 100%;
+    text-align: center;
   }
 }
 /* event-card */
