task/BASH-7: Страница Мотивация

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -26,6 +26,7 @@
     --primary-color: #14004E;
     --primary-hover-color: #423270;
     --primary-press-color: #372668;
+    --primary-container: #EFE9FF;
     --white-color: #FFFFFF;
     --text00-color: #242424;
     --text01-color: #606C7D;
