--- a/assets/styles/components/button/button.css
+++ b/assets/styles/components/button/button.css
@@ -11,3 +11,8 @@
 .btn-primary {
   background-color: var(--primary-color);
 }
+
+.btn-secondary {
+  background-color: var(--primary-container);
+  color: var(--primary-color)
+}
